# HPM5361MiniFOC

./: .clang-format  .gitignore  CMakeLists.txt
boards/: CMakeLists.txt
boards/HPM5361MiniFOC/: CMakeLists.txt  HPM5361MiniFOC.yaml  board.c  board.h  pinmux.c  pinmux.h
src/: project_config.h
src/app/: MotorClass.c  MotorClass.h  main.c
src/app/current_calibration/: current_calibration.c  current_calibration.h
src/app/electrical_angle_calibration/: electrical_angle_calibration.c  electrical_angle_calibration.h
src/config/: config.c
src/foc/: fast_sin.h  foc_core.c  foc_core.h  foc_pid.c  foc_pid.h  foc_pll.c  foc_pll.h
src/hardware/: adc_init.c  adc_init.h  can_init.c  can_init.h  pwm_init.c  pwm_init.h  trgm.h
src/hardware/current/: current.c  current.h
src/hardware/encoder/: encoder.c  encoder.h  mt6701_ssi_init.c  mt6701_ssi_init.h  qeiv2_init.c
src/hardware/usb/: cdc_acm.c  usb_config.h
